Fixec - 11-f  - Tablet Portrait : The gap between the site slider and the page is more than required

--- a/missingkids/less/css/application.css
+++ b/missingkids/less/css/application.css
@@ -11170,6 +11170,12 @@ label.error {
         right: 8px;
         top: 8px;
     } */
+@media (max-width: 768px) {
+  .stickyWrapper {
+    width: 182px;
+    padding: 5px 16px;
+  }
+}
 @media (max-width: 480px) {
   #arrow {
     left: 48%;
